--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
-  font-family: Helvetica;
-  font-size: 16px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
   line-height: 1.5;
   margin: 0;
 }
@@ -9,7 +9,8 @@ body {
   display: flex;
   font-display: row;
   justify-content: space-between;
-  background-color: bisque;
+  background-color: #eaa858;
+  padding: 0 1em;
 }
 
 .page-header ul {
